--- a/demo1/templates/demo1/listados/listado_viaje.html
+++ b/demo1/templates/demo1/listados/listado_viaje.html
@@ -44,8 +44,12 @@
         {% endif %}
     </tbody>
     </table>
+    </div>
+    <div class="card">
     {% if exitoso %}
-        <p>El viaje a eliminar es presente o futuro, no se realizo la eliminación</p>
+        <h3>No se realizo la eliminacion porque hay al menos un pasaje vendido</h3>
+    {% elif exitoso %}
+        <h3>No se realizo la modificacion porque hay al menos un pasaje vendido</h3>
     {% endif %}
     </div>
     <div>
