--- a/demo1/templates/demo1/modificar/formulario_modificar_viaje.html
+++ b/demo1/templates/demo1/modificar/formulario_modificar_viaje.html
@@ -13,6 +13,9 @@
             </form>
             </div>
             <div>
+            <div class="card">
+                <h4>Si va modificar la cantidad de asientos disponibles no puede superar la capacidad maxima de la combi que es  {{capacidad}}</h4> 
+            </div>    
             {% if not viajeValido %}
                 <div class="card">
                     <h3>La modificacion no se realizo porque la ruta con la fecha ingresada ya está reservado</h3>
