verificar patente agregado

--- a/demo1/templates/demo1/listados/listado_combi.html
+++ b/demo1/templates/demo1/listados/listado_combi.html
@@ -39,11 +39,11 @@
     <div class='card'>
     {% if noEliminado %}
     <div>
-        <h3>No fue posible borrar la combi ya que se encuentra asignado a una ruta</h3>
+        <h3>No es posible borrar la combi ya que se encuentra asignado a una ruta</h3>
     </div>
     {% elif noModificado %}
     <div>
-        <h3>No fue posible modificar la combi ya que se encuentra asignado a un viaje</h3>
+        <h3>No es posible modificar la combi ya que se encuentra asignado a un viaje</h3>
     </div>
     {% endif %}
     </div>
