cambios pequeños en algunos formularios. Realizo el HUs buscar viaje

--- a/demo1/templates/demo1/home_usuario.html
+++ b/demo1/templates/demo1/home_usuario.html
@@ -1,3 +1,6 @@
 {% extends 'demo1/base_home.html' %}
-   {% block content %}
-    {% endblock %}
+{% block content %}
+   <div align="right">
+      <h2><a href="{% url 'buscar_viajes' %}" >Buscar Viajes</a></h2>
+   </div>
+{% endblock %}
