--- a/demo1/templates/demo1/change_password.html
+++ b/demo1/templates/demo1/change_password.html
@@ -7,6 +7,9 @@
     
       <button type="submit">Guardar Cambios</button>
     </form>
+    {% if exito %}
+      <h3>Su contraseña fue modificada con exito</h3>
+    {% endif %}
     <div class = 'card' >
         <h2><a href="{% url 'modificar_pasajero' pk=user.pk%}">Atras</a></h2>
     </div>
