--- a/demo1/templates/demo1/change_password.html
+++ b/demo1/templates/demo1/change_password.html
@@ -1,4 +1,15 @@
-
+{% load static %}
+<html>
+    <head >
+        <title>Cambiar Contraseña</title>
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="{% static 'css/demo1.css' %}">
+    </head>
+    <body>
+      <div class = 'card' >
+      <h1>Cambiar Contraseña</h1>
+   </div>
    <div class = 'card'>
     <form method="post">
         
@@ -10,10 +21,11 @@
     {% if exito %}
       <h3>Su contraseña fue modificada con exito</h3>
     {% endif %}
+    
+    </div>
     <div class = 'card' >
-        <h2><a href="{% url 'modificar_pasajero' pk=user.pk%}">Atras</a></h2>
-    </div>
-    </div>
-
+      <h2><a href="{% url 'modificar_pasajero' pk=user.pk%}">Atras</a></h2>
+  </div>
+</body>
   
 
