--- a/demo1/templates/demo1/base_home.html
+++ b/demo1/templates/demo1/base_home.html
@@ -1,6 +1,8 @@
 {% load static %}
+<!DOCTYPE html>
 <html>
     <head >
+        <meta charset="UTF-8">
         <title>Home</title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
