--- a/demo1/templates/demo1/home_usuario.html
+++ b/demo1/templates/demo1/home_usuario.html
@@ -5,5 +5,22 @@
          <h2><a href="{% url 'buscar_viajes' %}" >Buscar Viajes</a></h2>
          <h2><a href="{% url 'crear_comentario' %}">Crear Comentario</a></h2>
       </div>
+      <div>
+         <ul style="list-style: none;">
+            <li><p>Consultar Pasajes</p></li>
+            <li><a href="{% url 'consultar_pasaje_user_p' pk=user.pk %}">Pendientes</a></li>
+            <li><a href="{% url 'consultar_pasaje_user_c' pk=user.pk %}">Carcelados</a></li>
+         </ul>
+         <!--<nav class="menuCSS3" style="width: 250px;margin: 50px; background: aqua;">
+            <ul class="menu" style="list-style: none;" >
+               <li style="position: relative; display: inline-block; " ><a href="#" style="display: block; padding: 15px 20px; color: #353535; text-decoration: none; font-family: 'Courier New';" for="submenu">Cunsultar Pasajes</a>
+                  <ul class="submenu" style="list-style: none; position: absolute; width: 120%;" >
+                     <li style="position: relative; background: #333333;"><a href="#" style="display: block; padding: 15px; color: aqua; text-decoration: none;">Pendientes</a></li>
+                     <li style="position: relative; background: #333333;"><a href="#" style="display: block; padding: 15px; color: aqua; text-decoration: none;">Carcelados</a></li>
+                  </ul>
+               </li>
+            </ul>
+         </nav>-->
+      </div>
    {% endif %}
    {% endblock %}
