--- a/demo1/templates/demo1/listados/lisPasajesPendien.html
+++ b/demo1/templates/demo1/listados/lisPasajesPendien.html
@@ -9,6 +9,9 @@
     <table class="tablalista" width=100% border="1">
         <tbody>
             <tr>
+                <td align="center" colspan="5">Pendientes</td>
+            </tr>
+            <tr>
                 <td align="center">Origen</td>
                 <td align="center">Destino</td>
                 <td align="center">Fecha de Viaje</td>
