--- a/demo1/templates/demo1/sumar_al_pasaje.html
+++ b/demo1/templates/demo1/sumar_al_pasaje.html
@@ -32,7 +32,7 @@
                     {% endif %}
                 </form>
              </div>
-             {% if compro %}
+             {% if compro and hayPasajes%}
             <div class = 'card'>
             <button type="button">
                 <a href="{% url 'validar_compra' %}">Comprar</a>
