--- a/demo1/templates/demo1/form/formulario_comentario.html
+++ b/demo1/templates/demo1/form/formulario_comentario.html
@@ -1,4 +1,4 @@
-{% extends 'demo1/base_registrar.html' %}
+{% extends 'demo1/base_comentario.html' %}
 
 {% block content %}
     <form method="POST" class="post-form" id="usuarioForm">
