--- a/demo1/templates/demo1/validar_compra.html
+++ b/demo1/templates/demo1/validar_compra.html
@@ -17,7 +17,9 @@
         <div >
             {% if ok %}
             <div class ='card'>
-                <h4>La compra del pasaje fue realizada con exito <h4></div>
+                <h3>La validacion de la tarjeta de credito fue exitosa <h></div>
+            <div class ='card'>
+                <h4>La compra del pasaje fue realizada con exito se detallan los datos a continuacion<h4></div>
                     <div class ='card'>
                 <h4>Pasajero: {{nombre}}  {{apellido}}<h4></div>
                     <div class ='card'>
