--- a/demo1/templates/demo1/sumar_al_pasaje.html
+++ b/demo1/templates/demo1/sumar_al_pasaje.html
@@ -35,7 +35,7 @@
              {% if compro and hayPasajes%}
             <div class = 'card'>
             <button type="button">
-                <a href="{% url 'validar_compra' %}">Comprar</a>
+                <a href="{% url 'validando' %}">Comprar</a>
             </button>
         </div>
         {% endif %}
