detalles del consultar listado de pasajes

--- a/demo1/templates/demo1/listados/lisPasajesPendien.html
+++ b/demo1/templates/demo1/listados/lisPasajesPendien.html
@@ -14,7 +14,7 @@
             <tr>
                 <td align="center">Origen</td>
                 <td align="center">Destino</td>
-                <td align="center">Fecha de Viaje</td>
+                <td align="center">Fecha y Hora de Viaje</td>
                 <td align="center">Costo Total</td>
                 <td align="center">Opción</td>
             </tr>
