--- a/demo1/templates/demo1/validar_compra.html
+++ b/demo1/templates/demo1/validar_compra.html
@@ -13,9 +13,9 @@
          
         <div class="page-header">
             {% if gold %}
-            <h1><a></a>Comprar Pasaje Usuario Gold</a></h1>
+            <h1><a></a>Pasaje Usuario Gold</a></h1>
             {% else %}
-            <h1><a></a>Comprar Pasaje</a></h1>
+            <h1><a></a>Pasaje</a></h1>
             {% endif %}
         </div>
         <div >
