--- a/demo1/templates/demo1/listados/listado_viaje.html
+++ b/demo1/templates/demo1/listados/listado_viaje.html
@@ -48,7 +48,7 @@
     <div class="card">
     {% if exitoso %}
         <h3>No se realizo la eliminacion porque hay al menos un pasaje vendido</h3>
-    {% elif exitoso %}
+    {% elif noModificado %}
         <h3>No se realizo la modificacion porque hay al menos un pasaje vendido</h3>
     {% endif %}
     </div>
