--- a/demo1/static/css/demo2.css
+++ b/demo1/static/css/demo2.css
@@ -7,7 +7,7 @@
 }
 
 .menu li a:hover{
-    color:#02105e;
+    color:#6b7bd1;
     transition: all .3s;   
 }
 
@@ -47,7 +47,7 @@
 
 .submenu li a{
     display: block;
-    padding: 15px;
+    padding: px;
     color: aqua;
     font-family: 'Courier New';
     text-decoration: none;
