--- a/demo1/templates/demo1/listados/lisPasajesPendien.html
+++ b/demo1/templates/demo1/listados/lisPasajesPendien.html
@@ -9,12 +9,13 @@
     <table class="tablalista" width=100% border="1">
         <tbody>
             <tr>
-                <td align="center" colspan="5">Pendientes</td>
+                <td align="center" colspan="6">Pendientes</td>
             </tr>
             <tr>
                 <td align="center">Origen</td>
                 <td align="center">Destino</td>
                 <td align="center">Fecha y Hora de Viaje</td>
+                <td align="center">Cant. de Pasajes</td>
                 <td align="center">Costo Total</td>
                 <td align="center">Opción</td>
             </tr>
@@ -23,6 +24,7 @@
                 <td >{{i.origen}}</td>
                 <td >{{i.destino}}</td>
                 <td >{{i.fecha}}</td>
+                <td>{{i.cantidad}}</td>
                 <td >{{i.costoTotal}}</td>
                 <td ><a href="{% url 'cancelar_pasaje' pk=i.pk%}">Cancelar</a></td>
             </tr>    
