--- a/demo1/templates/demo1/home_usuario.html
+++ b/demo1/templates/demo1/home_usuario.html
@@ -31,16 +31,11 @@
             {% endif %}
       </div>
       {% endfor %}
-   {% endif %}
-   </div>
+   {% else %}
       <div>
-          {%if page_obj.has_previous %}
-              <a href="?page={{ page_obj.previous_page_number }}">Anterior</a>
-          {%endif%}
-          {%if page_obj.has_next %}
-              <a href="?page={{ page_obj.next_page_number}}">Siguiente</a>
-          {%endif%}
+         <p>No se ha realizado ningún comentario</p>
       </div>
-      
+   </div>
+   {% endif %}
    {% endif %}
    {% endblock %}
