Aplicar javascript sobre el HU comprar pasaje

--- a/demo1/static/css/demo2.css
+++ b/demo1/static/css/demo2.css
@@ -47,7 +47,7 @@
 
 .submenu li a{
     display: block;
-    padding: px;
+    padding: 15px;
     color: aqua;
     font-family: 'Courier New';
     text-decoration: none;
