--- a/demo1/templates/demo1/base_home.html
+++ b/demo1/templates/demo1/base_home.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="{% static '/css/demo2.css' %}">
     </head>
     <body>
-        <div class="page-header">
+        <div class="page-header" align="center">
             {% if user.is_authenticated %}
                 <div align="right">
                     <h2><a href="http://127.0.0.1:8000/logout/"> Cerrar Sesión </a></h2>
