HU realizado con javascript

--- a/demo1/templates/demo1/form/formulario_prueba.html
+++ b/demo1/templates/demo1/form/formulario_prueba.html
@@ -12,11 +12,11 @@
                 crossorigin="anonymous"></script>
         <script src="{% static 'js/nuevojavascript.js' %}"></script>
         <div class="page-header">
-            <h1>De Compras Para el Viaje</h1>
+            <h1>Comprar Pasajes</h1>
         </div>
         <div>
             <div class="content container">
-                <div class="row">
+                <div class="row" id="form">
                     <form method="POST" id="form_creacion" action="{% url 'comprar_pasaje_form' pk %}">
                         {% csrf_token %}
                         {{ form.as_p}}
@@ -26,17 +26,23 @@
                         <button type="button" class="usoDeTarjeta" onclick="datos.ponerTarjetaAlForm()"> User mi Tarjeta </button>
                         {% endif %}
                     </form>
-                    <div><a href="{% url 'home_usuario' %}">Salir</a></div>
-                    <div class="mi_total"><h1 id="texto_total">Compra total de los Insumos: {{0}}</h1></div>
+                    <div class="mi_total" id="mi_total"><h4 id="texto_total">Compra total de los Insumos: {{0}}</h4></div>
                 </div>
                 <div id="confirmacion2">
+
+                </div>
+                <div id="esGold">
 
                 </div>
                 <div id="confirmacion">
 
                 </div>
+                <div id="botones">
+
+                </div>
+                <div><a href="{% url 'home_usuario' %}">Salir</a><a href="{% url 'buscar_viajes'%}"> Atras</a></div>
                 <script>
-                    const datos = new MisDatos('{{ pk }}', '{{ precioDeViaje }}');
+                    const datos = new MisDatos('{{ pk }}', '{{ precioDeViaje }}', '{{cantAsientos}}', '{{ esGold}}');
                     '{%for i in conPrecios %}'
                         datos.agregarPrecios("{{ i.id }}", "{{ i.precio }}");
                     '{% endfor %}'
