--- a/demo1/templates/demo1/form/formulario_viaje_busquedas.html
+++ b/demo1/templates/demo1/form/formulario_viaje_busquedas.html
@@ -51,6 +51,7 @@
                             <td>
                                 <a href="{% url 'comprar_pasaje_form' pk=v.pk %}">Comprar Pasaje</a>
                             </td>
+                            <!--'comprar_pasaje_form'-->
                         </tr>
                     {% endfor %}
             </tbody>
