--- a/demo1/templates/demo1/modificar/formulario_modificar_lugar.html
+++ b/demo1/templates/demo1/modificar/formulario_modificar_lugar.html
@@ -12,7 +12,7 @@
             {{ form.as_p}}
             <button type="submit" class="guardar lugar">Guardar</button>
         </form>
-        {% if fallido %}
+        {% if noModificado %}
         <div>
             <p> El Lugar ya se encuentra registrado</p>
         </div>
